@@ -2,18 +2,19 @@ package com.noplanb.domain.item.application;
 
 import com.noplanb.domain.character.domain.Character;
 import com.noplanb.domain.character.repository.CharacterRepository;
-import com.noplanb.domain.item.dto.response.CategoryItemListRes;
 import com.noplanb.domain.item.domain.Item;
 import com.noplanb.domain.item.dto.response.CategoryItemRes;
 import com.noplanb.domain.item_image.domain.repository.ItemImageRepository;
 import com.noplanb.global.config.security.token.UserPrincipal;
 import com.noplanb.global.payload.ApiResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.noplanb.domain.item_image.domain.ItemType.*;
 
@@ -23,27 +24,26 @@ import static com.noplanb.domain.item_image.domain.ItemType.*;
 public class ItemService {
 
     private final CharacterRepository characterRepository;
-    private final ItemImageRepository itemImageRepository;
 
 
-    public ResponseEntity<?> getHairItemList(UserPrincipal userPrincipal) {
-        return getCategoryItemList(userPrincipal, "hair");
+    @Cacheable(value = "item-cache", key = "'hair:' + #userId")
+    public List<CategoryItemRes> getHairItemList(Long userId) {
+        return getCategoryItemList(userId, "hair");
     }
-
-    public ResponseEntity<?> getFaceItemList(UserPrincipal userPrincipal) {
-        return getCategoryItemList(userPrincipal, "face");
+    @Cacheable(value = "item-cache", key = "'face:' + #userId")
+    public List<CategoryItemRes> getFaceItemList(Long userId) {
+        return getCategoryItemList(userId, "face");
     }
-
-    public ResponseEntity<?> getFashionItemList(UserPrincipal userPrincipal) {
-        return getCategoryItemList(userPrincipal, "fashion");
+    @Cacheable(value = "item-cache", key = "'fashion:' + #userId")
+    public List<CategoryItemRes> getFashionItemList(Long userId) {
+        return getCategoryItemList(userId, "fashion");
     }
-
-    public ResponseEntity<?> getBackgroundItemList(UserPrincipal userPrincipal) {
-        return getCategoryItemList(userPrincipal, "background");
+    @Cacheable(value = "item-cache", key = "'background:' + #userId")
+    public List<CategoryItemRes> getBackgroundItemList(Long userId) {
+        return getCategoryItemList(userId, "background");
     }
-
-    public ResponseEntity<?> getCategoryItemList(UserPrincipal userPrincipal, String category) {
-        Character character = characterRepository.findByUserId(userPrincipal.getId()).orElseThrow(() -> new IllegalArgumentException("캐릭터를 찾을 수 없습니다."));
+    public List<CategoryItemRes> getCategoryItemList(Long userId, String category) {
+        Character character = characterRepository.findByUserId(userId).orElseThrow(() -> new IllegalArgumentException("캐릭터를 찾을 수 없습니다."));
         List<Item> items = character.getItems();
         List<Item> itemList = null;
 
@@ -52,14 +52,14 @@ public class ItemService {
                 // item_type이 HAIR인 item만 필터링
                 itemList = items.stream()
                         .filter(item -> item.getItemImage().getItemType().equals(HAIR))
-                        .toList();
+                        .collect(Collectors.toList());
                 break;
 
             case "face":
                 // item_type이 EYE, FACECOLOR인 item만 필터링
                 itemList = items.stream()
                         .filter(item -> item.getItemImage().getItemType().equals(EYE) || item.getItemImage().getItemType().equals(FACECOLOR))
-                        .toList();
+                        .collect(Collectors.toList());
                 break;
 
 
@@ -67,39 +67,30 @@ public class ItemService {
                 // item_type이 HEAD, GLASSES, CLOTHES인 item만 필터링
                 itemList = items.stream()
                         .filter(item -> item.getItemImage().getItemType().equals(HEAD) || item.getItemImage().getItemType().equals(GLASSES) || item.getItemImage().getItemType().equals(CLOTHES) || item.getItemImage().getItemType().equals(ETC))
-                        .toList();
+                        .collect(Collectors.toList());
                 break;
 
             case "background":
                 // item_type이 BACKGROUND인 item만 필터링
                 itemList = items.stream()
                         .filter(item -> item.getItemImage().getItemType().equals(BACKGROUND))
-                        .toList();
+                        .collect(Collectors.toList());
                 break;
         }
 
-        List<CategoryItemRes> categoryItemRes=itemList.stream().map(item -> CategoryItemRes.builder()
-                .itemId(item.getId())
-                .itemImage(item.getItemImage().getItemImageUrl())
-                .itemName(item.getItemImage().getItemName())
-                .itemType(item.getItemImage().getItemType())
-                // 장착 가능 여부 -> 캐릭터의 레벨이 아이템의 필요 레벨보다 높거나 같으면 장착 가능
-                .ableToEquip(character.getLevel() >= item.getItemImage().getRequiredLevel()||item.isEquipped())
-                .isEquipped(item.isEquipped())
-                .requiredLevel(item.getItemImage().getRequiredLevel())
-                .build()).toList();
+        List<CategoryItemRes> categoryItemRes=itemList.stream()
+                .map(item -> CategoryItemRes.builder()
+                        .itemId(item.getId())
+                        .itemImage(item.getItemImage().getItemImageUrl())
+                        .itemName(item.getItemImage().getItemName())
+                        .itemType(item.getItemImage().getItemType())
+                        // 장착 가능 여부 -> 캐릭터의 레벨이 아이템의 필요 레벨보다 높거나 같으면 장착 가능
+                        .ableToEquip(character.getLevel() >= item.getItemImage().getRequiredLevel()||item.isEquipped())
+                        .isEquipped(item.isEquipped())
+                        .requiredLevel(item.getItemImage().getRequiredLevel())
+                        .build())
+                .collect(Collectors.toList());
 
-
-        CategoryItemListRes categoryItemListRes = CategoryItemListRes.builder()
-                .categoryItemList(categoryItemRes)
-                .build();
-
-        ApiResponse apiResponse = ApiResponse.builder()
-                .check(true)
-                .information(categoryItemListRes)
-                .build();
-
-        return ResponseEntity.ok(apiResponse);
-
+        return categoryItemRes;
     }
 }
